[tool.poetry]
name = "papaya"
version = "0.1.0"
description = "Papaya for everyone"
authors = ["WulkanHefajstos <wulkan.hefajstos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
djangorestframework = "^3.11.0"

[tool.poetry.dev-dependencies]
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
